repos/makepy/contents/test/fail/Assign.rules
x = NO
v = x
$v = YES

all:
    print(x)
